[package]
name = "lux-near-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
borsh = "1.5"
near-sdk = "5.6"

[dev-dependencies]
near-sdk = { version = "5.6", features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
