[package]
name = "lux-bridge-cosmwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = { version = "2.0", features = ["staking"] }
cosmwasm-schema = "2.0"
cw-storage-plus = "2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
hex = "0.4"

[dev-dependencies]
cosmwasm-vm = "2.0"
ed25519-zebra = "4.0"
