[package]
name = "lux-bridge"
version = "0.1.0"
description = "Lux Network cross-chain bridge program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lux_bridge"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = "0.29.0"
